--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <!-- Game Zone -->
       <section
         id="gameZone"
-        class="bg-[url('../images/triangle.svg')] bg-no-repeat bg-center bg-[length:250px] min-h-[250px]"
+        class="bg-[url('./images/triangle.svg')] bg-no-repeat bg-center bg-[length:250px] min-h-[250px]"
       >
         <div class="flex gap-[40px] items-center justify-center flex-col">
           <div class="flex gap-[80px]">
@@ -55,15 +55,15 @@
             />
             <img
               class="hand w-[200px] h-[203px] hover:cursor-pointer"
+              src="./images/scissors.svg"
+              alt="scissors"
+            />
+            <img
+              class="hand w-[200px] h-[203px] hover:cursor-pointer"
               src="./images/rock.svg"
               alt="rock"
             />
           </div>
-          <img
-            class="hand w-[200px] h-[203px] hover:cursor-pointer"
-            src="./images/scissors.svg"
-            alt="scissors"
-          />
         </div>
       </section>
 
@@ -98,33 +98,10 @@
           <h3 class="text-[#3B4262] font-[700] text-[32px] leading-[32px]">
             RULES
           </h3>
-          <div class="hover:bg-gray-100 rounded-[50%]">
-            <svg
-              class="cursor-pointer"
-              id="closeRules"
-              width="20"
-              height="20"
-              viewBox="0 0 20 20"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                opacity="0.25"
-                d="M19.0918 2.12109L11.667 9.5459L19.0918 16.9707L16.9707 19.0918L9.5459 11.667L2.12109 19.0918L0 16.9707L7.4248 9.5459L0 2.12109L2.12109 0L9.5459 7.4248L16.9707 0L19.0918 2.12109Z"
-                fill="#3B4262"
-              />
-            </svg>
-          </div>
+          <div class="hover:bg-gray-100 rounded-[50%]" id="closeRules"></div>
         </div>
-
-        <img src="./images/rules.svg" alt="Rules img" />
       </div>
-      <button
-        id="rulesModal"
-        class="w-[128px] h-[40px] fixed bottom-[15px] flex items-center justify-center text-[16px] font-[600] tracking-[2.5px] rounded-[8px] cursor-pointer transition duration-300 text-white bg-[transparent] border-[1px] border-[#FFFFFF] hover:bg-white hover:text-[#3B4262]"
-      >
-        Rules
-      </button>
+      <div id="rulesModal"></div>
     </footer>
     <script src="./js/app.js" type="module"></script>
   </body>
