--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Don Don Ziki</title>
+    <title>Don don ziki Ziki don</title>
     <link rel="stylesheet" href="./css/output.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -13,6 +14,7 @@
     />
   </head>
   <body class="index bg-gradient-to-b from-[#1F3757] to-[#131537] h-[105vh]">
+    <button id="btm">dark</button>
     <main id="overlay">
       <section class="flex items-center justify-center pt-[48px] pb-[64px]">
         <div
