--- a/inndex/inndex.htm
+++ b/inndex/inndex.htm
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Don don ziki</title>
+    <title>Don don ziki Ziki don</title>
     <link rel="stylesheet" href="../css/output.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
